# kaizen-experimentation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  go.work  go.work.sum  justfile  package-lock.json  progress.log.md  rust-toolchain.toml  skills-lock.json
crates/: Cargo.toml
crates/experimentation-analysis/: Cargo.toml  Dockerfile
crates/experimentation-analysis/src/: config.rs  delta_reader.rs  grpc.rs  lib.rs  main.rs  store.rs
crates/experimentation-analysis/tests/: avlm_integration_test.rs  m4a_m6_contract_test.rs  m5m4a_portfolio_contract_test.rs  phase5_e2e.rs  phase5_integration.rs
crates/experimentation-assignment/: Cargo.toml  Dockerfile
crates/experimentation-assignment/benches/: assignment_bench.rs
crates/experimentation-assignment/src/: bandit_client.rs  config.rs  config_cache.rs  connect_server.rs  http_json.rs  lib.rs  main.rs  service.rs  stream_client.rs  switchback.rs  targeting.rs
crates/experimentation-assignment/tests/: assignment_test.rs  config_cache_test.rs  connect_server_e2e.rs  http_json_e2e.rs  m1m4b_contract_test.rs  m1m4b_slate_contract_test.rs  stream_config_updates_test.rs  switchback_test.rs
crates/experimentation-bandit/: Cargo.toml
crates/experimentation-bandit/benches/: bandit_bench.rs  lp_constraints.rs
crates/experimentation-bandit/src/: cold_start.rs  lib.rs  linucb.rs  lp_constraints.rs  mad.rs  multi_objective.rs  neural.rs  policy.rs  reward_composer.rs  slate.rs  thompson.rs
crates/experimentation-bandit/tests/: convergence.rs  policy_roundtrip.rs
crates/experimentation-core/: Cargo.toml
crates/experimentation-core/src/: error.rs  lib.rs  telemetry.rs  time.rs
crates/experimentation-ffi/: Cargo.toml  build.rs
crates/experimentation-ffi/src/: lib.rs
crates/experimentation-ffi/tests/: ffi_determinism.rs
crates/experimentation-flags/: AGENTS.md  Cargo.toml  Dockerfile
crates/experimentation-flags/src/: admin.rs  audit.rs  config.rs  grpc.rs  kafka.rs  lib.rs  main.rs  reconciler.rs  store.rs
crates/experimentation-flags/tests/: chaos_test.rs  contract_test.rs
crates/experimentation-hash/: Cargo.toml
crates/experimentation-hash/benches/: hash_bench.rs
crates/experimentation-hash/src/: lib.rs  murmur3.rs
crates/experimentation-hash/tests/: determinism.rs  uniffi_determinism.rs  wasm_determinism.rs
crates/experimentation-ingest/: Cargo.toml
crates/experimentation-ingest/benches/: ingest_bench.rs
crates/experimentation-ingest/src/: classification.rs  dedup.rs  lib.rs  sessionization.rs  validation.rs
crates/experimentation-ingest/tests/: heartbeat_sessionization_test.rs  m2m3_kafka_contract_test.rs
crates/experimentation-interleaving/: AGENTS.md  Cargo.toml
crates/experimentation-interleaving/src/: lib.rs  multileave.rs  optimized.rs  team_draft.rs
crates/experimentation-management/: AGENTS.md  Cargo.toml
crates/experimentation-management/src/: adaptive_n.rs  bucket_reuse.rs  config.rs  contract_test_support.rs  fdr.rs  grpc.rs  kafka.rs  lib.rs  main.rs  portfolio.rs  rbac.rs  state.rs  state_machine.rs  store.rs  validators.rs
crates/experimentation-management/src/migration/: classifier.rs  cli.rs  mod.rs  report.rs  sql_ast.rs  test_support.rs  tier1.rs  tier2.rs
crates/experimentation-management/src/validators/: composite_cycle.rs  cycle.rs  experiment_types.rs  filter_sql.rs  metric_definition.rs  mod.rs
crates/experimentation-management/tests/: contract_preview_test.rs  contract_tests.rs  custom_corpus_parity.rs  custom_migrator_cli_test.rs  lifecycle_proptest.rs  metric_definition_e2e_test.rs  metric_deprecation_e2e_test.rs  metric_migration_e2e_test.rs  metricql_corpus_parity.rs  migration_report_test.rs  phase3_integration.rs  store_metric_test.rs  validate_metricql_global_scope_test.rs
crates/experimentation-management/tests/testdata/: report.golden.json  report.golden.md
crates/experimentation-pipeline/: Cargo.toml  Dockerfile
crates/experimentation-pipeline/src/: buffer.rs  kafka.rs  main.rs  metrics.rs  service.rs
crates/experimentation-pipeline/tests/: m2_m3_event_contract.rs  m3_m5_guardrail_contract.rs  reward_consumer_integration.rs
crates/experimentation-policy/: Cargo.toml  Dockerfile
crates/experimentation-policy/src/: config.rs  core.rs  grpc.rs  kafka.rs  main.rs  snapshot.rs  types.rs
crates/experimentation-proto/: Cargo.toml  build.rs
crates/experimentation-proto-connect/: Cargo.toml  build.rs
crates/experimentation-proto-connect/src/: lib.rs
crates/experimentation-proto/src/: lib.rs
crates/experimentation-stats/: AGENTS.md  Cargo.toml
crates/experimentation-stats/benches/: stats_bench.rs
crates/experimentation-stats/proptest-regressions/: adaptive_n.txt  avlm.txt
crates/experimentation-stats/src/: adaptive_n.rs  avlm.rs  bayesian.rs  bootstrap.rs  cate.rs  clustering.rs  cuped.rs  evalue.rs  fail_fast.rs  feedback_loop.rs  guardrail.rs  interference.rs  interleaving.rs  ipw.rs  lib.rs  multiple_comparison.rs  novelty.rs  orl.rs  portfolio.rs  sequential.rs  srm.rs  surrogate.rs  switchback.rs  synthetic_control.rs  tost.rs  ttest.rs
crates/experimentation-stats/tests/: bayesian_golden.rs  bootstrap_coverage.rs  bootstrap_golden.rs  cate_golden.rs  clustering_golden.rs  cuped_golden.rs  dr_ope_golden.rs  evalue_golden.rs  interference_golden.rs  interleaving_golden.rs  ipw_golden.rs  mcc_golden.rs  novelty_golden.rs  orl_golden.rs  sequential_golden.rs  srm_golden.rs  surrogate_golden.rs  synthetic_control_golden.rs  tost_golden.rs  ttest_golden.rs
crates/experimentation-stats/tests/golden/: bayesian_beta_binomial_clear_effect.json  bayesian_beta_binomial_no_effect.json  bayesian_normal_clear_effect.json  bayesian_normal_no_effect.json  bootstrap_no_effect.json  (+81 more)
infra/: go.mod  (+16 more)
sdks/server-python/: pyproject.toml
sdks/server-python/experimentation/: __init__.py  client.py  providers.py  types.py
sdks/server-python/tests/: test_local_provider.py  test_mock_provider.py  test_remote_provider.py
(+1165 files in other folders)
