[workspace]
resolver = "2"
members = [
    "crates/experimentation-core",
    "crates/experimentation-hash",
    "crates/experimentation-proto",
    "crates/experimentation-stats",
    "crates/experimentation-bandit",
    "crates/experimentation-interleaving",
    "crates/experimentation-ingest",
    "crates/experimentation-ffi",
    "crates/experimentation-assignment",
    "crates/experimentation-analysis",
    "crates/experimentation-pipeline",
    "crates/experimentation-policy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Proprietary"
repository = "https://github.com/org/experimentation-platform"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
# gRPC
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.7"
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
deltalake = { version = "0.18", features = ["datafusion"] }
# RocksDB
rocksdb = "0.22"
# Numerical
nalgebra = "0.33"
statrs = "0.17"
rand = "0.8"
rand_distr = "0.4"
# Property testing
proptest = "1.5"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# FFI
cbindgen = "0.27"
# Directory walking
walkdir = "2.5"
# WASM
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
# getrandom 0.3.x needs explicit js backend for wasm32-unknown-unknown
getrandom = { version = "0.3", features = ["js"] }
# Cross-language
uniffi = "0.28"
# Python
pyo3 = { version = "0.22", features = ["extension-module"] }
# Testing
assert_approx_eq = "1.1"
mockall = "0.13"
tokio-test = "0.4"
# ML (optional, for bandit gpu feature)
tch = "0.16"
# Bloom filter
bloomfilter = "1.0"
# Metrics
prometheus = "0.13"
# Async streams
tokio-stream = "0.1"
# Async utilities (CancellationToken, backoff)
tokio-util = "0.7"
# Time
chrono = { version = "0.4", features = ["serde"] }
# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
