[workspace]
resolver = "2"
members = [
    # Foundation layer
    "experimentation-core",
    "experimentation-hash",
    "experimentation-proto",
    # Algorithm layer
    "experimentation-stats",
    "experimentation-bandit",
    "experimentation-interleaving",
    # Infrastructure layer
    "experimentation-ingest",
    "experimentation-ffi",
    # Service layer (binaries)
    "experimentation-assignment",
    "experimentation-analysis",
    "experimentation-pipeline",
    "experimentation-policy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Proprietary"
repository = "https://github.com/org/experimentation-platform"

[workspace.dependencies]
# Foundation
tokio = { version = "1.40", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"

# Statistics & numerics
statrs = "0.17"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
proptest = "1.5"

# Bandit-specific
tch = "0.16"    # PyTorch bindings for neural contextual bandit
rocksdb = "0.22"

# Infrastructure
rdkafka = { version = "0.36", features = ["cmake-build"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
bloomfilter = "1.0"
deltalake = { version = "0.18", features = ["datafusion"] }

# Cross-language
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
uniffi = "0.28"
cbindgen = "0.27"
pyo3 = { version = "0.22", features = ["extension-module"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
assert_approx_eq = "1.1"
mockall = "0.13"

# Build
tonic-build = "0.12"
walkdir = "2"
tokio-stream = "0.1"
prometheus = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
