[package]
name = "experimentation-analysis"
version.workspace = true
edition.workspace = true

[[bin]]
name = "experimentation-analysis"
path = "src/main.rs"

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-proto = { path = "../experimentation-proto" }
experimentation-stats = { path = "../experimentation-stats" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
