[package]
name = "experimentation-analysis"
version.workspace = true
edition.workspace = true

[[bin]]
name = "experimentation-analysis"
path = "src/main.rs"

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-proto = { path = "../experimentation-proto" }
experimentation-stats = { path = "../experimentation-stats" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
deltalake = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
