[package]
name = "experimentation-analysis"
version.workspace = true
edition.workspace = true

[lib]
name = "experimentation_analysis"
path = "src/lib.rs"

[[bin]]
name = "experimentation-analysis"
path = "src/main.rs"

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-proto = { path = "../experimentation-proto" }
experimentation-stats = { path = "../experimentation-stats" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
deltalake = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
deltalake = { workspace = true }
experimentation-bandit = { path = "../experimentation-bandit" }
rand = { workspace = true }
