[package]
name = "experimentation-assignment"
version.workspace = true
edition.workspace = true

[lib]
name = "experimentation_assignment"
path = "src/lib.rs"

[[bin]]
name = "experimentation-assignment"
path = "src/main.rs"

[[bench]]
name = "assignment_bench"
harness = false

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-proto = { path = "../experimentation-proto" }
experimentation-hash = { path = "../experimentation-hash" }
experimentation-interleaving = { path = "../experimentation-interleaving" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
criterion = { workspace = true }
experimentation-bandit = { path = "../experimentation-bandit" }
tokio-stream = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
