[package]
name = "experimentation-bandit"
version.workspace = true
edition.workspace = true

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-stats = { path = "../experimentation-stats" }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bandit_bench"
harness = false

[features]
default = []
gpu = ["dep:tch"]     # Neural contextual bandit (Phase 3)

[dependencies.tch]
workspace = true
optional = true
