[package]
name = "experimentation-bandit"
version.workspace = true
edition.workspace = true

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-stats = { path = "../experimentation-stats" }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
nalgebra = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bandit_bench"
harness = false

[features]
default = []
gpu = ["dep:candle-core", "dep:candle-nn", "dep:tempfile"]

[dependencies.candle-core]
workspace = true
optional = true

[dependencies.candle-nn]
workspace = true
optional = true

[dependencies.tempfile]
workspace = true
optional = true
