[package]
name = "experimentation-ffi"
version.workspace = true
edition.workspace = true

[lib]
# cdylib + staticlib = shared/static C library for CGo consumers.
# lib = allows Rust integration tests to link against this crate.
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
experimentation-hash = { path = "../experimentation-hash" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }

[features]
default = []
ffi = []
