[package]
name = "experimentation-flags"
version.workspace = true
edition.workspace = true

[lib]
name = "experimentation_flags"
path = "src/lib.rs"

[[bin]]
name = "experimentation-flags"
path = "src/main.rs"

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-hash = { path = "../experimentation-hash" }
experimentation-proto = { path = "../experimentation-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
prost = { workspace = true }
base64 = { workspace = true }
