[package]
name = "experimentation-hash"
version.workspace = true
edition.workspace = true

[dependencies]
# experimentation-core is optional: the hash crate operates on u32 only and
# does not need assert_finite!().  Keeping it optional avoids pulling chrono/uuid
# into the wasm32-unknown-unknown target where they fail to compile.
experimentation-core = { path = "../experimentation-core", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
uuid = { workspace = true }
# proptest pulls in rusty-fork → wait-timeout which requires OS process APIs
proptest = { workspace = true }
[features]
default = []
wasm = ["dep:wasm-bindgen"]
ffi = []            # Enables C-compatible extern functions for cbindgen
uniffi = []         # UniFFI bindings for Swift/Kotlin
python = ["dep:pyo3"]

[dependencies.wasm-bindgen]
workspace = true
optional = true

[dependencies.pyo3]
workspace = true
optional = true
