[package]
name = "experimentation-ingest"
version.workspace = true
edition.workspace = true

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-proto = { path = "../experimentation-proto" }
bloomfilter = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
prost = { workspace = true }

[[bench]]
name = "ingest_bench"
harness = false
