[package]
name = "experimentation-pipeline"
version.workspace = true
edition.workspace = true

[[bin]]
name = "experimentation-pipeline"
path = "src/main.rs"

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-proto = { path = "../experimentation-proto" }
experimentation-ingest = { path = "../experimentation-ingest" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rdkafka = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prometheus = { workspace = true }
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
