[package]
name = "experimentation-policy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "experimentation-policy"
path = "src/main.rs"

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-proto = { path = "../experimentation-proto" }
experimentation-bandit = { path = "../experimentation-bandit" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
