[package]
name = "experimentation-policy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "experimentation-policy"
path = "src/main.rs"

[dependencies]
experimentation-core = { path = "../experimentation-core" }
experimentation-proto = { path = "../experimentation-proto" }
experimentation-bandit = { path = "../experimentation-bandit" }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
prost-types = { workspace = true }
rdkafka = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tokio-stream = { workspace = true }
