[package]
name = "experimentation-proto-connect"
version.workspace = true
edition = "2024"
rust-version = "1.88"
license.workspace = true
repository.workspace = true
description = "ADR-031 pilot: buffa + Connect codegen for the assignment/v1 package. Kept separate from the prost/tonic experimentation-proto crate."

[dependencies]
buffa = { version = "0.7", features = ["json"] }
buffa-types = { version = "0.7", features = ["json"] }
connectrpc = { version = "0.7", default-features = false, features = ["server"] }
http-body = "1"
serde = { workspace = true }

[build-dependencies]
connectrpc-build = "0.7"
walkdir = "2"

[features]
default = []
# Generate client bindings alongside the server trait. Off by default — only
# the in-process round-trip test and SDK migration need clients during the pilot.
client = ["connectrpc/client"]
